AKS/K8s/hello/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: azurewebsiets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: nginx
          image: nginx:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 80
